k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cats-api
  labels:
    app: cats-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cats-api
  template:
    metadata:
      labels:
        app: cats-api
    spec:
      containers:
        - name: cats-api
          image: ascjke/cats-api:1.0.0
          ports:
            - containerPort: 8080
