k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cats-api
spec:
  selector:
    app.kubernetes.io/name: cats-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
