k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ascjke
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: cats-api.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cats-api
                port:
                  number: 80
